--- a/packages/data/data/services/jitsi-meet.jsonc
+++ b/packages/data/data/services/jitsi-meet.jsonc
@@ -14,18 +14,31 @@
       "validFrom": "2014-01-01",
       "cspDirectives": {
         "script-src": [
-          "https://meet.jit.si"
+          "https://meet.jit.si",
+          "'unsafe-inline'"
+        ],
+        "style-src": [
+          "'unsafe-inline'"
         ],
         "frame-src": [
           "https://meet.jit.si"
         ],
         "connect-src": [
-          "https://meet.jit.si"
+          "https://meet.jit.si",
+          "wss://meet.jit.si"
+        ],
+        "img-src": [
+          "https:",
+          "data:"
+        ],
+        "media-src": [
+          "'self'",
+          "data:"
         ]
       },
       "requiresNonce": false,
-      "requiresDynamic": false,
-      "notes": "Jitsi Meet open-source video conferencing integration"
+      "requiresDynamic": true,
+      "notes": "Jitsi Meet verified from official iframe API documentation and community forums. CRITICAL SECURITY LIMITATION: Requires 'unsafe-inline' for script-src and style-src - will not function without it. Known CSP security weakness. Nonce implementation discussed but not implemented. WebSocket connections for real-time communication. iframe API well-documented for embedding."
     }
   },
   "defaultVersion": "current",
