--- a/packages/data/data/services/notion.jsonc
+++ b/packages/data/data/services/notion.jsonc
@@ -24,7 +24,7 @@
       },
       "requiresNonce": false,
       "requiresDynamic": false,
-      "notes": "Notion all-in-one workspace platform. Page embeds require frame permissions. Database embeds may require additional domains."
+      "notes": "Notion verified from official embedding documentation. Blocks iframe embedding with X-Frame-Options: sameorigin and CSP frame-ancestors 'self' https://mail.notion.so only. Third-party services like notioniframe.com available for workarounds. API has limited embed block types in public API. Notion uses Iframely service for embedding 1,900+ external domains."
     }
   },
   "defaultVersion": "current",
