--- a/packages/data/data/services/webflow.jsonc
+++ b/packages/data/data/services/webflow.jsonc
@@ -7,7 +7,9 @@
   "website": "https://webflow.com/",
   "officialDocs": [
     "https://developers.webflow.com/",
-    "https://university.webflow.com/lesson/custom-code-in-the-head-and-body-tags"
+    "https://university.webflow.com/lesson/custom-code-in-the-head-and-body-tags",
+    "https://help.webflow.com/hc/en-us/articles/33961369170963-Custom-security-headers",
+    "https://university.webflow.com/lesson/custom-code-embed"
   ],
   "versions": {
     "current": {
@@ -26,7 +28,7 @@
       },
       "requiresNonce": false,
       "requiresDynamic": false,
-      "notes": "Webflow visual web development platform. Custom code embeds may require additional permissions. CMS assets are served from CloudFront CDN."
+      "notes": "Webflow verified from official documentation. ENTERPRISE ONLY: Custom security headers available only on Enterprise plans ($15k+ annually). Paying customers request broader CSP access. Custom code blocked by default CSP. Community reports script-src 'none' blocking custom JavaScript. Cloudflare workaround available for non-Enterprise users."
     }
   },
   "defaultVersion": "current",
