--- a/packages/data/data/services/auth0.jsonc
+++ b/packages/data/data/services/auth0.jsonc
@@ -7,8 +7,10 @@
   "website": "https://auth0.com/",
   "officialDocs": [
     "https://auth0.com/blog/defending-against-xss-with-csp/",
+    "https://auth0.com/blog/deploying-csp-in-spa/",
+    "https://auth0.com/blog/from-zero-to-hero-with-csp/",
     "https://auth0.com/docs/libraries/auth0-single-page-app-sdk",
-    "https://auth0.com/docs/get-started/auth0-overview"
+    "https://auth0.com/docs/troubleshoot/product-lifecycle/past-migrations/clickjacking-protection-for-universal-login"
   ],
   "versions": {
     "current": {
@@ -26,7 +28,7 @@
       },
       "requiresNonce": false,
       "requiresDynamic": true,
-      "notes": "Auth0 identity platform. Tenant-specific domains require wildcard permissions. Social login may require additional provider domains. Universal Login requires frame embedding. May require 'unsafe-eval' for SPA SDK functionality."
+      "notes": "Auth0 verified from comprehensive official CSP documentation. New Universal Login automatically sets frame-ancestors: 'none' and X-Frame-Options: deny (cannot be disabled). SPA SDK uses Web Workers - configure separate worker file to avoid blob CSP issues. Requires connect-src for tenant domain. Form-action should be 'none' for SPAs. CSP-Report-Only recommended for testing."
     }
   },
   "defaultVersion": "current",
