--- a/packages/data/data/services/browserstack.jsonc
+++ b/packages/data/data/services/browserstack.jsonc
@@ -6,8 +6,9 @@
   "description": "Cross-browser testing platform for web and mobile applications",
   "website": "https://www.browserstack.com",
   "officialDocs": [
-    "https://www.browserstack.com/docs",
-    "https://www.browserstack.com/docs/automate/selenium/getting-started"
+    "https://www.browserstack.com/docs/percy/common-issue/handling-csp",
+    "https://www.browserstack.com/docs/enterprise/domain-verification",
+    "https://www.browserstack.com/docs/live/local-testing"
   ],
   "versions": {
     "current": {
@@ -19,11 +20,14 @@
         "connect-src": [
           "https://api.browserstack.com",
           "https://hub-cloud.browserstack.com"
+        ],
+        "frame-src": [
+          "https://www.browserstack.com"
         ]
       },
       "requiresNonce": false,
       "requiresDynamic": false,
-      "notes": "BrowserStack testing platform integration scripts"
+      "notes": "BrowserStack verified from official documentation. Testing platform recommends disabling CSP for precise screenshots, then re-enabling for security. Enterprise domain controls available for IP whitelisting. Iframe content capture may require CORS header adjustments. Official CSP domain list should be requested from BrowserStack support."
     }
   },
   "defaultVersion": "current",
