--- a/packages/data/data/services/drupal.jsonc
+++ b/packages/data/data/services/drupal.jsonc
@@ -6,8 +6,9 @@
   "description": "Open-source content management framework",
   "website": "https://drupal.org",
   "officialDocs": [
-    "https://www.drupal.org/docs/",
-    "https://www.drupal.org/docs/drupal-apis"
+    "https://www.drupal.org/project/csp",
+    "https://www.drupal.org/docs/extending-drupal/contributed-modules/contributed-module-documentation/content-security-policy",
+    "https://www.drupal.org/project/seckit"
   ],
   "versions": {
     "current": {
@@ -23,7 +24,7 @@
       },
       "requiresNonce": false,
       "requiresDynamic": false,
-      "notes": "Drupal.org resources and update services"
+      "notes": "Drupal verified from official CSP module documentation. Official Content-Security-Policy module provides comprehensive CSP management, reporting endpoint, Libraries API integration, admin interface with validation. Security Kit module available with basic CSP support. Report-Only mode recommended for safe configuration. Dynamic policy modification via csp.policy_alter events. HTTP Response Headers module for custom headers."
     }
   },
   "defaultVersion": "current",
