--- a/packages/data/data/services/microsoft-teams.jsonc
+++ b/packages/data/data/services/microsoft-teams.jsonc
@@ -6,26 +6,44 @@
   "description": "Microsoft's collaboration and video conferencing platform",
   "website": "https://teams.microsoft.com",
   "officialDocs": [
-    "https://docs.microsoft.com/en-us/microsoftteams/platform/",
-    "https://docs.microsoft.com/en-us/microsoftteams/platform/tabs/how-to/create-tab-pages/content-page"
+    "https://learn.microsoft.com/en-us/microsoftteams/platform/tabs/how-to/tab-requirements",
+    "https://devblogs.microsoft.com/microsoft365dev/action-required-ensure-your-microsoft-teams-apps-are-ready-for-upcoming-domain-changes/",
+    "https://learn.microsoft.com/en-us/answers/questions/1785610/what-domain-do-i-specify-in-my-csp-headers-for-tea"
   ],
   "versions": {
     "current": {
       "validFrom": "2017-01-01",
       "cspDirectives": {
         "script-src": [
-          "https://statics.teams.cdn.office.net"
+          "https://statics.teams.cdn.office.net",
+          "https://*.teams.microsoft.com"
         ],
         "frame-src": [
-          "https://teams.microsoft.com"
+          "https://teams.microsoft.com",
+          "https://*.teams.microsoft.com",
+          "https://*.teams.microsoft.us",
+          "https://local.teams.office.com"
+        ],
+        "frame-ancestors": [
+          "https://*.cloud.microsoft",
+          "https://teams.microsoft.com",
+          "https://*.teams.microsoft.com",
+          "https://*.teams.microsoft.us",
+          "https://local.teams.office.com",
+          "https://*.office.com",
+          "https://*.officeapps.live.com",
+          "https://*.microsoft.com",
+          "https://onedrive.live.com",
+          "https://*.onedrive.live.com"
         ],
         "connect-src": [
-          "https://teams.microsoft.com"
+          "https://teams.microsoft.com",
+          "https://*.teams.microsoft.com"
         ]
       },
       "requiresNonce": false,
       "requiresDynamic": false,
-      "notes": "Microsoft Teams integration and web client"
+      "notes": "Microsoft Teams verified from official Microsoft Learn documentation. Critical: Teams apps are migrating to *.cloud.microsoft domain by June 2024 - update CSP frame-ancestors to include this domain for future compatibility. Requires TeamsJS library v2.19+ and comprehensive frame-ancestors directive for Microsoft 365 integration across multiple hosting domains."
     }
   },
   "defaultVersion": "current",
