--- a/packages/data/data/services/shopify.jsonc
+++ b/packages/data/data/services/shopify.jsonc
@@ -6,24 +6,35 @@
   "description": "E-commerce platform with integrated payment processing",
   "website": "https://shopify.com",
   "officialDocs": [
-    "https://shopify.dev/docs/api/checkout-ui-extensions",
-    "https://shopify.dev/docs/apps/checkout/web-pixels"
+    "https://shopify.dev/docs/apps/build/security/set-up-iframe-protection",
+    "https://shopify.dev/docs/storefronts/headless/hydrogen/content-security-policy",
+    "https://shopify.dev/docs/api/hydrogen/2024-10/utilities/createcontentsecuritypolicy"
   ],
   "versions": {
     "current": {
       "validFrom": "2020-01-01",
       "cspDirectives": {
         "script-src": [
-          "https://cdn.shopify.com"
+          "https://cdn.shopify.com",
+          "https://*.shopify.com"
         ],
         "connect-src": [
           "https://checkout.shopify.com",
-          "https://shop.app"
+          "https://shop.app",
+          "https://*.shopify.com"
+        ],
+        "frame-ancestors": [
+          "https://*.myshopify.com",
+          "https://admin.shopify.com"
+        ],
+        "img-src": [
+          "https://cdn.shopify.com",
+          "https://*.shopify.com"
         ]
       },
-      "requiresNonce": false,
-      "requiresDynamic": false,
-      "notes": "Shopify checkout and payment processing scripts"
+      "requiresNonce": true,
+      "requiresDynamic": true,
+      "notes": "Shopify verified from official developer documentation. Requires dynamic frame-ancestors per shop domain (https://[shop].myshopify.com https://admin.shopify.com). Embedded apps must implement shop-specific CSP headers. Hydrogen storefronts use script nonces and include cdn.shopify.com by default. App Store submission requires proper iframe protection with shop domain verification."
     }
   },
   "defaultVersion": "current",
