--- a/packages/data/data/services/squarespace.jsonc
+++ b/packages/data/data/services/squarespace.jsonc
@@ -7,7 +7,8 @@
   "website": "https://www.squarespace.com/",
   "officialDocs": [
     "https://developers.squarespace.com/",
-    "https://support.squarespace.com/hc/en-us/articles/205815908-Using-code-injection"
+    "https://support.squarespace.com/hc/en-us/articles/205815908-Using-code-injection",
+    "https://support.squarespace.com/hc/en-us/articles/205815928-Adding-custom-code-to-your-site"
   ],
   "versions": {
     "current": {
@@ -28,7 +29,7 @@
       },
       "requiresNonce": false,
       "requiresDynamic": false,
-      "notes": "Squarespace website builder platform. Custom domains may require additional CSP entries. Template-specific assets may need additional domains."
+      "notes": "Squarespace verified from official documentation and community forums. CRITICAL CSP ISSUE: Squarespace does not natively provide comprehensive CSP support. Financial institutions flagged 'Content Security Policy Missing'. Bank regulators require CSP fixes. Single-domain CSP breaks editor functionality. Custom code injection available but CSP conflicts. Users in 'tough position' for compliance requirements."
     }
   },
   "defaultVersion": "current",
