--- a/packages/data/data/services/strapi.jsonc
+++ b/packages/data/data/services/strapi.jsonc
@@ -7,7 +7,7 @@
   "website": "https://strapi.io",
   "officialDocs": [
     "https://docs.strapi.io/",
-    "https://docs.strapi.io/developer-docs/latest/developer-resources/database-apis-reference/rest-api.html"
+    "https://docs.strapi.io/cms/configurations/middlewares"
   ],
   "versions": {
     "current": {
@@ -22,7 +22,7 @@
       },
       "requiresNonce": false,
       "requiresDynamic": false,
-      "notes": "Strapi headless CMS API endpoints (replace with your instance URL)"
+      "notes": "Strapi verified from official middleware documentation. CSP configured in config/middlewares.js via strapi::security middleware. useDefaults: true recommended. Supports connect-src, img-src, media-src directives. AWS S3 integration examples provided. Known issue: custom CSP ignored for /admin path. upgradeInsecureRequests: null commonly used. Flexible directive configuration supported."
     }
   },
   "defaultVersion": "current",
