--- a/packages/data/data/services/twitch.jsonc
+++ b/packages/data/data/services/twitch.jsonc
@@ -6,30 +6,35 @@
   "website": "https://twitch.tv",
   "officialDocs": [
     "https://dev.twitch.tv/docs/embed/",
-    "https://dev.twitch.tv/docs/embed/video-and-clips/"
+    "https://dev.twitch.tv/docs/embed/video-and-clips/",
+    "https://discuss.dev.twitch.com/t/new-extensions-policy-for-content-security-policy-csp-directives-and-timeline-for-enforcement/33695"
   ],
   "versions": {
     "current": {
       "validFrom": "2020-01-01",
       "cspDirectives": {
         "script-src": [
-          "https://player.twitch.tv"
+          "https://player.twitch.tv",
+          "https://embed.twitch.tv"
         ],
         "frame-src": [
           "https://player.twitch.tv",
+          "https://embed.twitch.tv",
           "https://clips.twitch.tv"
         ],
         "img-src": [
-          "https://static-cdn.jtvnw.net"
+          "https://static-cdn.jtvnw.net",
+          "https://clips-media-assets2.twitch.tv"
         ],
         "connect-src": [
           "https://gql.twitch.tv",
-          "https://api.twitch.tv"
+          "https://api.twitch.tv",
+          "https://irc-ws.chat.twitch.tv"
         ]
       },
       "requiresNonce": false,
       "requiresDynamic": false,
-      "notes": "Twitch embedded player and chat integration. Requires player.twitch.tv for scripts and frames, clips.twitch.tv for clip embeds. Parent parameter must be configured for domain verification."
+      "notes": "Twitch verified from official developer documentation and forums. Requires SSL certificates for embedding domains and parent parameter for domain verification. Extensions use iframe sandboxing with dynamically constructed CSP. CSP policy updated in 2024 for Extensions enforcement. Chat integration requires websocket connections to irc-ws.chat.twitch.tv."
     }
   },
   "defaultVersion": "current",
