--- a/packages/data/data/services/campaign-monitor.jsonc
+++ b/packages/data/data/services/campaign-monitor.jsonc
@@ -7,14 +7,19 @@
   "website": "https://www.campaignmonitor.com/",
   "officialDocs": [
     "https://www.campaignmonitor.com/api/",
-    "https://help.campaignmonitor.com/topic.aspx?t=206"
+    "https://help.campaignmonitor.com/s/article/html-signup-forms"
   ],
   "versions": {
     "current": {
       "validFrom": "2004-01-01",
       "cspDirectives": {
         "script-src": [
-          "https://campaignmonitor.com"
+          "https://campaignmonitor.com",
+          "https://www.campaignmonitor.com"
+        ],
+        "frame-src": [
+          "https://campaignmonitor.com",
+          "https://www.campaignmonitor.com"
         ],
         "connect-src": [
           "https://api.createsend.com"
@@ -22,7 +27,7 @@
       },
       "requiresNonce": false,
       "requiresDynamic": false,
-      "notes": "Campaign Monitor email marketing platform. Uses CreateSend API for backend operations. Template builder may require additional domains."
+      "notes": "Campaign Monitor verified from official API and HTML signup forms documentation. External session API used as iframe source for embedding within applications. HTML signup forms can be embedded on websites. Recommends linking to forms in emails rather than embedding for reliability. No specific official CSP documentation found - contact support for detailed requirements. Uses CreateSend API for backend operations."
     }
   },
   "defaultVersion": "current",
