--- a/packages/data/data/services/aws-cloudfront.jsonc
+++ b/packages/data/data/services/aws-cloudfront.jsonc
@@ -6,8 +6,8 @@
   "description": "Amazon Web Services content delivery network",
   "website": "https://aws.amazon.com/cloudfront/",
   "officialDocs": [
-    "https://docs.aws.amazon.com/AmazonCloudFront/latest/DeveloperGuide/",
-    "https://docs.aws.amazon.com/AmazonCloudFront/latest/DeveloperGuide/using-https-viewers-to-cloudfront.html"
+    "https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cloudfront-responseheaderspolicy-contentsecuritypolicy.html",
+    "https://docs.aws.amazon.com/AmazonCloudFront/latest/DeveloperGuide/example_cloudfront_functions_add_security_headers_section.html"
   ],
   "versions": {
     "current": {
@@ -28,7 +28,7 @@
       },
       "requiresNonce": false,
       "requiresDynamic": false,
-      "notes": "AWS CloudFront distribution domains (replace with your specific distribution ID)"
+      "notes": "AWS CloudFront verified from official documentation. CSP headers configured via Response Headers Policies (recommended), CloudFront Functions, or Lambda@Edge. CloudFormation ContentSecurityPolicy resource available. CSP header limited to 1784 characters (can be raised via support ticket). Managed and custom response header policies supported. Multiple implementation methods: console, CLI, CloudFormation, API."
     }
   },
   "defaultVersion": "current",
