--- a/packages/data/data/services/convertkit.jsonc
+++ b/packages/data/data/services/convertkit.jsonc
@@ -6,23 +6,35 @@
   "description": "Email marketing platform designed for creators and bloggers",
   "website": "https://convertkit.com/",
   "officialDocs": [
-    "https://developers.convertkit.com/",
-    "https://help.convertkit.com/en/articles/2502591-getting-started-with-the-convertkit-api"
+    "https://developers.kit.com/v3",
+    "https://help.kit.com/en/articles/4009572-form-embedding-basics"
   ],
   "versions": {
     "current": {
       "validFrom": "2013-01-01",
       "cspDirectives": {
         "script-src": [
-          "https://convertkit.com"
+          "https://convertkit.com",
+          "https://app.convertkit.com"
         ],
         "connect-src": [
-          "https://api.convertkit.com"
+          "https://api.convertkit.com",
+          "https://app.convertkit.com"
+        ],
+        "form-action": [
+          "https://app.convertkit.com"
+        ],
+        "frame-src": [
+          "https://app.convertkit.com"
+        ],
+        "img-src": [
+          "https://convertkit.com",
+          "https://app.convertkit.com"
         ]
       },
       "requiresNonce": false,
       "requiresDynamic": false,
-      "notes": "ConvertKit email marketing platform for creators. Form embeds may require additional script sources. Landing pages hosted on separate domains."
+      "notes": "ConvertKit (now Kit) verified from official embedding documentation. JavaScript embed recommended over HTML for automatic updates. Forms submit to app.convertkit.com domain. API base URL: api.convertkit.com/v3/. React and Svelte libraries available on GitHub. No specific official CSP documentation found - test with Content-Security-Policy-Report-Only header first. Requires form-action directive for form submissions."
     }
   },
   "defaultVersion": "current",
