--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -63,7 +63,8 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "provenance": false
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
